--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -8,7 +12,21 @@
 }
 
 table, tr, th, td {
-  border: 1px solid black;
+  position: center;
+}
+
+table {
+  border: 2px solid forestgreen;
+  width: 800px;
+  height: 200px;
+}
+  
+th {
+  border-bottom: 1px solid black;
+}
+  
+td {
+  text-align: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
