--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@ table {
   border: 2px solid forestgreen;
   width: 800px;
   height: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
   
 th {
@@ -28,6 +30,17 @@ th {
 td {
   text-align: center;
 }
+
+.coin {
+  padding: 5px;
+}
+
+input, label  {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
